// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SuccessBtn /> onClick event works correctly 1`] = `
<button
  className="btn success"
  onClick={[MockFunction]}
>
  <span
    className="btnContent"
  />
</button>
`;

exports[`<SuccessBtn /> renders text correctly 1`] = `
<button
  className="btn success"
  onClick={null}
>
  <span
    className="btnContent"
  >
    Hello world
  </span>
</button>
`;

exports[`<SuccessBtn /> shows loader correctly 1`] = `
<button
  className="btn success"
  onClick={null}
>
  <div
    className="loader"
  />
</button>
`;
